objects/Linkedin_Job_Form__c.object
<CustomObject>
    <description>This is an object to add details of job looking candidates</description>
    <fields>
        <fullName>About_Previous_Job__c</fullName>
        <label>About Previous Job</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <defaultValue>&quot;John&quot;</defaultValue>
        <description>This field is created to enter first name of the candidate</description>
        <inlineHelpText>Dear user, please enter first part of your name here.</inlineHelpText>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joining_Date__c</fullName>
        <label>Joining Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlook_Name__c</fullName>
        <formula>Last_Name__c  &amp;   &apos; ,&apos;   &amp; First_Name__c</formula>
        <label>Outlook Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_City__c</fullName>
        <label>Preferred City</label>
        <picklist>
            <controllingField>Preferred_Country__c</controllingField>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canbera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Torronto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Country__c</fullName>
        <label>Preferred Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salary_Expected__c</fullName>
        <label>Salary Expected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>fdafdaf__c</fullName>
        <label>fdafdaf</label>
        <picklist>
            <picklistValues>
                <fullName>dfafadf</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Linkedin Job Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Form-{00}</displayFormat>
        <label>Linkedin Job Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linkedin Job Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Validation_Rule_for_Age</fullName>
        <active>true</active>
        <description>Test for rule that restricts age between 20-30</description>
        <errorConditionFormula>Age__c  &lt; 20   ||  Age__c  &gt; 30</errorConditionFormula>
        <errorDisplayField>Age__c</errorDisplayField>
        <errorMessage>Sorry! No job for age below 20 as well as above 30</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_rule_about_previous_job</fullName>
        <active>true</active>
        <description>Test to not have certain text in field previous job field</description>
        <errorConditionFormula>CONTAINS(About_Previous_Job__c , &quot;boss&quot;)</errorConditionFormula>
        <errorDisplayField>About_Previous_Job__c</errorDisplayField>
        <errorMessage>Don&apos;t say anything about your boss</errorMessage>
    </validationRules>
</CustomObject>